# nusmods

./: .babelrc  .buildignore  .csscomb.json  .dockerignore  .editorconfig  .env.example  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .htaccess  .jshintrc  .npmrc  .oxfmtrc.json  .prettierrc.js  .stylelintrc  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FRONTEND_REWRITE_PLAN.md  Gemfile  Gruntfile.js  INSTALL-V2.md  LICENSE  LICENSE-MIT  MAINTENANCE.md  README.md  Vagrantfile  academicCalendar.js  bower.json  ci.sh  codecov.yml  component.json  composer.json  config.js  config.ts  (+27 more)
.circleci/: config.yml
.context/: nusmods-overall-review.md  nusmods-visual-review.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
__mocks__/: .eslintrc.js  fs-extra.js
__tests__/: examTimetable.test.js  genReqTree.test.js  graphql.test.js  mapKeysDeep.test.js  mergeModuleFields.test.js  normalizeString.test.js  parseString.js  pdf.test.js  sortByKey.test.js  walkDir.test.js
api/: .env.example  .eslintrc.js  .gitignore  .htaccess  .travis.yml  LICENSE-MIT  README.md  config.js  docker-compose.yml  gulpfile.babel.js  jest.config.js  knexfile.js  package.json  submissions.ts  webpack.config.babel.js
app/: .htaccess  barenusessities.php  config.json  config.json.dist  html.php  ical.php  index.ejs  index.html  ivlelogin.html  jpg.php  news.php  opensearch.xml  pdf.php  redirect.php  short_url.php  xls.php
auth/: index.ts
backend/: Cargo.toml  README.md  ci.sh  clippy.toml  rust-toolchain.toml
backend/crates/nusmods-api/: Cargo.toml
backend/crates/nusmods-api/src/: auth.rs  lib.rs  reviews.rs
export/: .env.example  .gitignore  .yarn  .yarnrc  Dockerfile.dev  Dockerfile.prod  README.md  app.js  config.docker.js  config.example.js  config.js  data.js  ecosystem.config.js  ecosystem.staging.config.js  index.js  nodemon.json  oxlint.config.mjs  package.json  render.js  tsconfig.json  vercel.json  vitest.config.ts
fonts/: fontawesome-webfont.eot
gulp-tasks/: examTimetable.js  (+1 more)
(+3880 files in other folders)
