[package]
name = "nusmods-api"
version.workspace = true
version.edition = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
