[package]
name = "nusmods-api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
